feat(0) add logic update product with variant